--- a/server/public/index.html
+++ b/server/public/index.html
@@ -48,10 +48,8 @@
         <small class="example webhost">{fullUrl}/api/http://foo.com:80</small><br>
 
         <h3>Example Output</h3>
-        <small class="example webhost">
-            {"original_url":"https://www.google.com","short_url":"{fullUrl}/8"}
-            {"original_url":"http://foo.com:80","short_url":"{fullUrl}/9"}
-        </small><br>
+        <small class="example webhost">{"original_url":"https://www.google.com","short_url":"{fullUrl}/8"}<br></small>
+        <small class="example webhost">{"original_url":"http://foo.com:80","short_url":"{fullUrl}/9"}</small><br>
 
         <h3>Usage</h3>
         <small class="example webhost">{fullUrl}/9</small>
